issue: fixed nav links spacing

--- a/headphones/7-styles.css
+++ b/headphones/7-styles.css
@@ -36,7 +36,8 @@ body {
 
 .nav-links {
   font-size: 25px;
-  margin-right: 10px;
+  margin-right: 15px;
+  margin-left: 15px;
   justify-content: space-between;
 }
 .nav-links a {
